Refactoring: CMake modernization
* Added conanfile for easier dependency management
* For now this only manages libmysqlclient
* Updated readme with how to use conan
* CMake files now build all pstress variants at the same time
* Webscale support is removed
* Some additional CMake modernization

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,16 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.20)
 PROJECT(pstress)
-SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
-INCLUDE(FindGit)
+SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
+
+SET( CMAKE_EXPORT_COMPILE_COMMANDS ON )
+
+FIND_PACKAGE(Threads REQUIRED)
+FIND_PACKAGE(libmysqlclient REQUIRED)
+find_package(Git)
+
 INCLUDE(PQSetupCompiler)
-INCLUDE(PQFindMySQLFork)
+
 INCLUDE(PQCPack)
 INCLUDE(PQFindRevision)
+
 ADD_SUBDIRECTORY(src)
