--- a/src/pstress.cfg
+++ b/src/pstress.cfg
@@ -1,46 +1,53 @@
-[node0.ci.percona.com]
-address = 192.168.10.1
-user = root
-password = test!test
-database =
-# Relative or absolute path to sql file
-infile = pquery.sql
-verbose = True
-debug = True
-threads = 1
-queries-per-thread = 100
-max-packet-size = 32M
-run = Yes
-# Log all queries
-log-all-queries = No
-# Log succeeded queries
-log-succeded-queries = No
-# Log failed queries
-log-failed-queries = Yes
-# Execute SQL randomly
-shuffle = Yes
-# Extended output of query result
-log-query-statistics = Yes
-# Log query duration in milliseconds
-log-query-duration = No
-# Log query output
-log-client-output = No
-log-query-numbers = No
+[node0.ci.percona.com] address = 192.168.10.1 user = root password =
+    test !test database =
+#Relative or absolute path to sql file
+        infile = pquery.sql verbose = True debug = True threads =
+            1 queries - per - thread =
+                100 max - packet - size = 32M run =
+                    Yes
+#Log all queries
+                        log -
+                    all - queries =
+                        No
+#Log succeeded queries
+                            log -
+                        succeded - queries =
+                            No
+#Log failed queries
+                                log -
+                            failed - queries = Yes
+#Execute SQL randomly
+                                shuffle =
+                                    Yes
+#Extended output of query result
+                                        log -
+                                    query - statistics =
+                                        Yes
+#Log query duration in milliseconds
+                                            log -
+                                        query - duration =
+                                            No
+#Log query output
+                                                log -
+                                            client - output =
+                                                No log - query - numbers = No
 
-[node1.ci.percona.com]
-address = 127.0.0.1
-user = test
-password = test
-infile = pquery.sql
-shuffle = Yes
-queries-per-thread = 150
-debug = True
-run = No
+                                                    [node1.ci.percona
+                                                         .com] address =
+                                                        127.0.0.1 user = test password = test
+                                                            infile = pquery
+                                                                         .sql shuffle =
+                                                                Yes queries -
+                                                                per -
+                                                                thread = 150 debug = True run = No
 
-[node2.ci.percona.com]
-address = 127.0.0.1
-user = root
-password = 1q2w3e
-infile = pquery2.sql
-run = No
-debug = True
+                                                                    [node2.ci
+                                                                         .percona
+                                                                         .com] address =
+                                                                        127.0.0.1 user = root
+                                                                            password = 1q2w3e infile =
+                                                                                pquery2
+                                                                                    .sql
+                                                                                        run =
+                                                                                    No debug =
+                                                                                        True
