--- a/pstress/pstress-run-57.conf
+++ b/pstress/pstress-run-57.conf
@@ -11,16 +11,16 @@
 ################################################################################
 
 # ################### User configurable variables: generics 1 ##################
-# pstress-ps: Percona Server, pstress-ms: MySQL                                #
+# Location of pstress executable                                               #
 ################################################################################
-PSTRESS_BIN=${SCRIPT_PWD}/../src/pstress-ps
+PSTRESS_BIN=${SCRIPT_PWD}/../src/pstress
 
 ################################################################################
 # Options for pstress used to define the type of DDLs/DMLs/SQLs to be          #
 # executed. Default options added.                                             #
 # Please modify the parameters as per needs before starting the runs.          #
 ################################################################################
-DYNAMIC_QUERY_PARAMETER="--tables 10 --records 100 --log-all-queries --check-preload"
+DYNAMIC_QUERY_PARAMETER="--flavor=ps --tables 10 --records 100 --log-all-queries --check-preload"
 
 ################################################################################
 # Random seed to create the metadata. If not set, random value will be picked. #
