--- a/pstress/pstress-run-80.conf
+++ b/pstress/pstress-run-80.conf
@@ -11,16 +11,16 @@
 ################################################################################
 
 # ################### User configurable variables: generics 1 ##################
-# pstress-ps: Percona Server, pstress-ms: MySQL                                #
+# Location of pstress executable                                               #
 ################################################################################
-PSTRESS_BIN=${SCRIPT_PWD}/../src/pstress-ps
+PSTRESS_BIN=${SCRIPT_PWD}/../bin/pstress
 
 ################################################################################
 # Options for pstress used to define the type of DDLs/DMLs/SQLs to be          #
 # executed. Default options added.                                             #
 # Please modify the parameters as per needs before starting the runs.          #
 ################################################################################
-DYNAMIC_QUERY_PARAMETER="--tables 10 --records 100 --log-all-queries --check-preload"
+DYNAMIC_QUERY_PARAMETER="--flavor=ps --tables 10 --records 100 --log-all-queries --check-preload"
 
 ################################################################################
 # Random seed to create the metadata. If not set, random value will be picked. #
@@ -31,13 +31,13 @@ SEED=
 # MySQL Basedir. Required for all runs.                                        #
 # eg. BASEDIR=$HOME/mysql-8.0/bld/install                                      #
 ################################################################################
-BASEDIR=$HOME/path/to/PS/bld/directory
+BASEDIR=$HOME/work/ps80-debug/
 
 ################################################################################
 # Working directory. Here we keep the log files, option list, failed items.    #
 # Please leave $RANDOMD!                                                       #
 ################################################################################
-WORKDIR=$HOME/create/a/directory/$RANDOMD
+WORKDIR=$HOME/work/ps80-pstress/$RANDOMD
 
 ################################################################################
 # Run directory. Keeps a copy of the data dir template & stores mysqld runs    #
@@ -62,7 +62,7 @@ SIGNAL=9
 ################################################################################
 # Number of individual trials to execute (one can always interrupt with ctrl+c #
 ################################################################################
-TRIALS=50
+TRIALS=2
 
 ################################################################################
 # Should be used with caution when a large INFILE is used. It is ideal for     #
@@ -169,7 +169,7 @@ COMPONENT_KEYRING_VAULT=0
 # Note: When running in cluster mode(GRP_RPL_CLUSTER_RUN=1), the value of      #
 # THREADS is fetched from the cluster config file pstress-cluster-run.cfg      #
 ################################################################################
-THREADS=10
+THREADS=4
 
 ################################################################################
 # Enable this option to start Group Replication runs                           #
