--- a/pstress/pstress-run-PXC57.conf
+++ b/pstress/pstress-run-PXC57.conf
@@ -11,16 +11,16 @@
 ################################################################################
 
 # ################### User configurable variables: generics 1 ##################
-# pstress-pxc: Percona Cluster                                                 #
+# Location of pstress executable                                               #
 ################################################################################
-PSTRESS_BIN=${SCRIPT_PWD}/../src/pstress-pxc
+PSTRESS_BIN=${SCRIPT_PWD}/../src/pstress
 
 ################################################################################
 # Options for pstress used to define the type of DDLs/DMLs/SQLs to be          #
 # executed. Default options added.                                             #
 # Please modify the parameters as per needs before starting the runs.          #
 ################################################################################
-DYNAMIC_QUERY_PARAMETER="--tables 10 --records 100 --log-all-queries"
+DYNAMIC_QUERY_PARAMETER="--flavor=pxc --tables 10 --records 100 --log-all-queries"
 
 ################################################################################
 # Random seed to create the metadata. If not set, random value will be picked. #
