--- a/pstress/pstress-run-rocksdb.conf
+++ b/pstress/pstress-run-rocksdb.conf
@@ -12,16 +12,16 @@
 ################################################################################
 
 # ################### User configurable variables: generics 1 ##################
-# pstress-ps: Percona Server, pstress-ms: MySQL, pstress-pxc: PXC              #
+# Location of pstress executable                                               #
 ################################################################################
-PSTRESS_BIN=${SCRIPT_PWD}/../src/pstress-ps
+PSTRESS_BIN=${SCRIPT_PWD}/../src/pstress
 
 ################################################################################
 # Options for pstress used to define the type of DDLs/DMLs/SQLs to be          #
 # executed. Default options added.                                             #
 # Please modify the parameters as per needs before starting the runs.          #
 ################################################################################
-DYNAMIC_QUERY_PARAMETER="--tables 10 --records 100 --log-all-queries"
+DYNAMIC_QUERY_PARAMETER="--flavor=ps --tables 10 --records 100 --log-all-queries"
 
 ################################################################################
 # Empty seed implies Random seed number (6 digit no.) will be chosen by driver #
