--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 .DS_Store
-CMakeCache.txt
-CMakeFiles
-build/
-CMakeUserPresets.json
-.vscode
-bin/
+/CMakeCache.txt
+/CMakeFiles
+/build/
+/CMakeUserPresets.json
+/.vscode
+/bin/
+/logs/
+/datadir/
