Added sanitizers and fixed shared_ptr race condition

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,33 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 SET( CMAKE_EXPORT_COMPILE_COMMANDS ON )
 enable_testing()
 
+option(WITH_ASAN "Build with address sanitizer")
+option(WITH_UBSAN "Build with undefined behavior sanitizer")
+
+if (WITH_ASAN)
+	add_compile_options(-fsanitize=address)
+	add_link_options(-fsanitize=address)
+endif ()
+
+if (WITH_UBSAN)
+	add_compile_options(-fsanitize=undefined)
+	add_link_options(-fsanitize=undefined)
+endif ()
+
+if (WITH_TSAN)
+	add_compile_options(-fsanitize=thread)
+	add_link_options(-fsanitize=thread)
+endif ()
+
+if (WITH_MSAN)
+	add_compile_options(-fsanitize=memory)
+	add_link_options(-fsanitize=memory)
+endif ()
+
+if (WITH_ASAN OR WITH_UBSAN OR WITH_TSAN OR WITH_MSAN)
+	add_compile_options(-fno-omit-frame-pointer)
+endif()
+
 find_package(Threads REQUIRED)
 find_package(libmysqlclient REQUIRED)
 find_package(libpqxx REQUIRED)
