--- a/.github/workflows/build-matrix.yml
+++ b/.github/workflows/build-matrix.yml
@@ -11,10 +11,12 @@ jobs:
       matrix:
         ubuntu_version: [22,24]
         build_type: [Debug,RelWithDebInfo]
+        compiler: [gcc, clang]
     uses: ./.github/workflows/build-and-test.yml
     with:
       ubuntu_version: ${{ matrix.ubuntu_version }}
       build_type: ${{ matrix.build_type }}
+      compiler: ${{ matrix.compiler }}
     secrets: inherit
   release:
     needs: build
