--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -41,6 +41,7 @@ jobs:
         uses: actions/checkout@master
         with:
           path: 'src/pstress'
+          submodules: recursive
 
       - name: Install/build dependencies
         run: |
